src/opengl/qopenglwindow.cpp
@@ -60,6 +60,23 @@ QT_BEGIN_NAMESPACE
   given OpenGL version and profile, or enabling depth and stencil
   buffers.
 
+  \note It is up to the application to ensure depth and stencil buffers are
+  requested from the underlying windowing system interface. Without requesting
+  a non-zero depth buffer size there is no guarantee that a depth buffer will
+  be available, and as a result depth testing related OpenGL operations may fail
+  to function as expected.
+
+  Commonly used depth and stencil buffer size requests are 24 and 8,
+  respectively. For example, a QOpenGLWindow subclass could do this in its
+  constructor:
+
+  \code
+      QSurfaceFormat format;
+      format.setDepthBufferSize(24);
+      format.setStencilBufferSize(8);
+      setFormat(format);
+  \endcode
+
   Unlike QWindow, QOpenGLWindow allows opening a painter on itself and perform
   QPainter-based drawing.
 
